syntax = "proto3";

option go_package = "github.com/iotaledger/goshimmer/packages/network/warpsync/proto";

package warpsyncproto;

message Packet {
  oneof body {
    EpochBlocksStart epochBlocksStart = 1;
    EpochBlocksBatch epochBlocksBatch = 2;
    EpochBlocksEnd epochBlocksEnd = 3;
    EpochBlocksRequest epochBlocksRequest = 4;
  }
}

message EpochBlocksStart {
  int64 EI = 1;
  bytes EC = 2;
  int64 blocksCount = 3;
}

message EpochBlocksBatch {
  int64 EI = 1;
  bytes EC = 2;
  repeated bytes blocks = 3;
}

message EpochBlocksEnd {
  int64 EI = 1;
  bytes EC = 2;
  bytes roots = 3;
}

message EpochBlocksRequest {
  int64 EI = 1;
  bytes EC = 2;
}